--- a/main.html
+++ b/main.html
@@ -10,7 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<h1>Tirumala Tirupathi Devastanam</h1>
+	<br>
+	<p>Tirumala Tirupati Devasthanams (TTD) is a religious trust that manages the famous Sri Venkateswara Temple in Tirumala, Andhra Pradesh. It oversees temple administration, rituals, and facilities for millions of devotees visiting the sacred shrine. Established in 1932, TTD also manages various temples, provides free meals (Annadanam), and promotes Vedic traditions and social welfare activities. The temple is one of the richest and most visited religious sites in the world, attracting pilgrims seeking the blessings of Lord Venkateswara.</p>
+	<ol>
+		<li><strong> Sri Venkateswara Temple</strong></li>
+		<li><strong> Sri vari Laddu famous for worldwide</strong></li>
+		 <li><strong>Free meals(Annadanam)</strong></li>
+		<li><strong>Tonsuring (Hair Offering)</strong></li>
+		<li><strong> The Seven Hills & Natural Beauty </strong></li>
+		</ol>
+	<ul>
+		 <li><i>Free meals(Annadanam)</i></li>
+		<li><i>Tirupati Laddu</i></li>
+		<li><i>Pulihora </i></li>
+		<li><i>Daddojanam (Temple-style Curd Rice)</i></li>
+		<li><i>Pongal </i></li>
+	</ul>
+	
+		
 
+	
 </body>
 
 </html>
