--- a/main.html
+++ b/main.html
@@ -10,25 +10,26 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
- <h1>Tirumala Tirupathi Devasthanams</h1>
-<br>
-<p>Tirumala Tirupati Devasthanams (TTD) is a religious trust that manages the famous Sri Venkateswara Temple in Tirumala, Andhra Pradesh. It oversees temple administration, rituals, and facilities for millions of devotees visiting the sacred shrine. Established in 1932, TTD also manages various temples, provides free meals (Annadanam), and promotes Vedic traditions and social welfare activities. The temple is one of the richest and most visited religious sites in the world, attracting pilgrims seeking the blessings of Lord Venkateswara.</p>
+ <h1>Tirumala Tirupathi Devastanam</h1>
+    <br>
+    <p>Tirumala Tirupati Devasthanams (TTD) is a religious trust that manages the famous Sri Venkateswara Temple in Tirumala, Andhra Pradesh. It oversees temple administration, rituals, and facilities for millions of devotees visiting the sacred shrine. Established in 1932, TTD also manages various temples, provides free meals (Annadanam), and promotes Vedic traditions and social welfare activities. The temple is one of the richest and most visited religious sites in the world, attracting pilgrims seeking the blessings of Lord Venkateswara.</p>
 
-<ol>
-    <li><strong>Sri Venkateswara Temple</strong></li>
-    <li><strong><em>Sri Vari Laddu</em> famous worldwide</strong></li>
-    <li><strong><em>Free meals</em> (Annadanam)</strong></li>
-    <li><strong><em>Tonsuring (Hair Offering)</em></strong></li>
-    <li><strong>The Seven Hills & <em>Natural Beauty</em></strong></li>
-</ol>
+    <ol>
+        <li><strong>Sri Venkateswara Temple</strong></li>
+        <li><strong><em>Sri vari Laddu</em> famous worldwide</strong></li>
+        <li><strong><em>Free meals</em> (Annadanam)</strong></li>
+        <li><strong><em>Tonsuring (Hair Offering)</em></strong></li>
+        <li><strong>The Seven Hills & <em>Natural Beauty</em></strong></li>
+    </ol>
 
-<ul>
-    <li><i>Free meals (Annadanam)</i></li>
-    <li><i><strong>Tirupati Laddu</strong></i></li>
-    <li><i><strong>Pulihora</strong></i></li>
-    <li><i><strong>Daddojanam</strong> (Temple-style Curd Rice)</i></li>
-    <li><i><strong>Pongal</strong></i></li>
-</ul>
+    <ul>
+        <li><i><strong>Free meals (Annadanam)</strong></i></li>
+        <li><i><strong>Tirupati Laddu</strong></i></li>
+        <li><i><strong>Pulihora</strong></i></li>
+        <li><i><strong>Daddojanam</strong> (Temple-style Curd Rice)</i></li>
+        <li><i><strong>Pongal</strong></i></li>
+    </ul>
+
 
 	
 		
